# UseCaseMaif

./: .env.example  .gitignore  README.md  Sentiment.py  preprocessing.py  pyproject.toml  requirements.txt  sentiment_analysis_after_diarisation.py  website.py
code_tests/: evaluer_wer.py  preprocessing.py  sentiment_analysis_after_diarisation.py  supprimer_metadonnee.py  train.py
code_tests/processed_segments/: Je brise la glace.srt
examples/: example_transcription.py
process/: whisper_main.py
processed_segments/: Je brise la glace.srt
src/usecasemaif/: __init__.py  config.py
src/usecasemaif/models/: __init__.py  transcription.py
src/usecasemaif/pipeline/: __init__.py  transcription_pipeline.py
static/: style.css
web/: main.py  patch_lightning.py  preprocessing.py  processor.py  summarize.py  website.py
web/static/: script.js  style.css
web/templates/: index.html
