[project]
name = "usecasemaif"
version = "0.1.0"
description = "Pipeline de transcription audio avec diarization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "librosa>=0.11.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "whisperx>=3.7.4",
]
